Added GC logging options for JVM